--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&family=Roboto+Condensed:wght@300;700&display=swap');
 
+:root{
+    --drk-gray: rgba(37,37,37,1);
+    --brgt-green: rgba(19, 222, 29, 0.7);
+    --drk-green:rgba(19, 222, 29, 0.3);
+    --off-white: rgba(215, 215, 215, 1);
+    --slated-gray: rgba(208, 208, 208, 0.8);
+    --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+}
 
-*{
+*{  
+    font-family: "Roboto Condensed";
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #252525;
+    background-color: rgba(37, 37, 37, 1);
 }
 
 li, a, button{
-    font-family: "Roboto Condensed";
     font-weight: 300;
     font-size: 26px;
-    color: #f3f3f3;
+    color: var(--off-white);
     text-decoration: none;
 }
 
 header{
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+    justify-content: center;
     align-items: center;
-    padding: 30px 15%;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    position: fixed;
+    top: 0px;
+    z-index: 11;
+    padding: 0px 50px;
+    width: 100%;
+    height: 100px;
+    background-color: var(--drk-gray);
+    transition: var(--transition);
+    pointer-events: auto !important;
 }
 
 .name-lastname{
-    font-family: "Roboto Condensed";
     font-weight: 700;
     cursor: pointer;
-    color: #f3f3f3;
+    color: var(--off-white);
     font-size: 36px;
+}
+
+.name{
+    font-weight: 700;
 }
 
 .name-lastname{
@@ -38,9 +56,21 @@ header{
 }
 
 .name-lastname:hover{
-    color: #13de1d;
+    color: var(--brgt-green);
 }
 
+.navbar{
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    color: var(--slated-gray);
+    counter-reset: item 0;
+    z-index: 12;
+}
 .nav_links{
     list-style: none;
 }
@@ -55,12 +85,12 @@ header{
 }
 
 .nav_links li a:hover{
-    color: #13de1d;
+    color: var(--brgt-green);
 }
 
 button{
     padding: 9px 25px;
-    background-color: #252525;
+    background-color: var(--drk-gray);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -68,18 +98,31 @@ button{
 }
 
 button:hover{
-    color: #13de1d;
+    color:var(--drk-green);
 }
 
 .home-cont{
-    font-family: "Roboto Condensed";
-    font-weight: 100;
-    font-size: 36px;
-    padding-top: 15rem;
-    color: #f3f3f3;
-    text-align: center;
+    margin: 1% 4% 0%;
+    padding: 4%;
 }
 
-.prof-typing{
-    font-weight: 700;
+.small-txt{
+    font-size: 30px;
+    font-weight: 100;
+    color: var(--brgt-green);
+}
+
+.home-name{
+    font-size: 67px;
+    color: var(--off-white);
+}
+
+
+.home-profession{
+    font-size: 67px;
+    color: var(--slated-gray);
+}
+.my-pic{
+    max-width: 250px;
+    max-height: 250px;
 }
