--- a/css/styles.css
+++ b/css/styles.css
@@ -1,199 +1,216 @@
-@import url('https://fonts.googleapis.com/css2?family=Poor+Story&family=Roboto+Condensed:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poor+Story&family=Roboto+Condensed:wght@300;700&display=swap");
 
-:root{
-    --drk-gray: rgba(37,37,37,1);
-    --bahama-blue:rgba(65, 147, 169,1);
-    --bahama-dark:rgba(65, 147, 169,0.5);
-    --off-white: rgba(215, 215, 215, 1);
-    --slated-gray: rgba(208, 208, 208, 0.8);
-    --boston-blue: rgb(59, 190, 226);
-    --nav-height:50px;
+:root {
+  --drk-gray: rgba(37, 37, 37, 1);
+  --bahama-blue: rgba(65, 147, 169, 1);
+  --bahama-dark: rgba(65, 147, 169, 0.5);
+  --off-white: rgba(215, 215, 215, 1);
+  --slated-gray: rgba(208, 208, 208, 0.8);
+  --boston-blue: rgb(59, 190, 226);
+  --nav-height: 50px;
 }
 
-*{  
-    font-family: "Roboto Condensed";
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: rgba(37, 37, 37, 1);
+* {
+  font-family: "Roboto Condensed";
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(37, 37, 37, 1);
 }
 
-body{
-    padding-top: var(--nav-height);
+body {
+  padding-top: var(--nav-height);
 }
 
-li, a, button{
-    font-weight: 300;
-    font-size: 26px;
-    color: var(--off-white);
-    text-decoration: none;
+li,
+a,
+button {
+  font-weight: 300;
+  font-size: 26px;
+  color: var(--off-white);
+  text-decoration: none;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    margin: auto;
-    padding: 2% 2%;
-    top: 0px;
-    width: 100%;
-    background-color: var(--drk-gray);
-    transition: var(--transition);
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  margin: auto;
+  padding: 2% 2%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  transition: all 300ms ease-in-out;
 }
 
-.name-lastname{
-    font-weight: 700;
-    color: var(--off-white);
-    font-size: 36px;
+.navbar {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-evenly;
+  -webkit-box-align: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: var(--nav-height);
+  margin: 2% 2% 0% 0%;
+  padding: 1% 2% 2% 0%;
+  top: 0;
+  left: 0;
+  color: var(--slated-gray);
+  z-index: 2;
 }
 
-.name{
-    font-weight: 700;
+.nav_links {
+  list-style: none;
 }
 
-.name-lastname{
-    transition: all 0.3s ease 0s;
+.nav_links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
 
-.name-lastname:hover{
-    color: var(--boston-blue);
+.nav_links li a {
+  transition: all 0.3s ease 0s;
 }
 
-.navbar{
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-evenly;
-    -webkit-box-align: center;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: var(--nav-height);
-    margin: 2% 2% 2% 0%;
-    padding: 2% 2% 2% 0%;
-    top: 0;
-    left: 0;
-    color: var(--slated-gray);
-    z-index: 2;
+.nav_links li a:hover {
+  color: var(--boston-blue);
 }
 
-.nav_links{
-    list-style: none;
+.par-decor {
+  color: var(--bahama-blue);
 }
 
-.nav_links li{
-    display: inline-block;
-    padding: 0px 20px;
+.contact-btn {
+  padding: 7%;
+  background-color: var(--drk-gray);
+  color: var(--off-white);
+  border-color: var(--bahama-dark);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  z-index: 6;
 }
 
-.nav_links li a{
-    transition: all 0.3s ease 0s;
+.name-lastname {
+  font-weight: 700;
+  color: var(--off-white);
+  font-size: 36px;
 }
 
-.nav_links li a:hover{
-    color: var(--boston-blue);
+.name {
+  font-weight: 700;
 }
 
-.nav_links li .par-decor{
-    color: var(--bahama-blue);
+.name-lastname {
+  transition: all 0.3s ease 0s;
 }
 
-.nav--hidden{
-    transform: translateY(calc(-1 * var(--nav-height)));
-}
-.contact-btn{
-    padding: 7%;
-    background-color: var(--drk-gray);
-    color: var(--off-white);
-    border-color: var(--bahama-dark);
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-    z-index: 6;
+.name-lastname:hover {
+  color: var(--boston-blue);
 }
 
-button:hover{
-    color:rgba(208, 208, 208, 0.3);
-    border-color: var(--bahama-blue);
+button:hover {
+  color: rgba(208, 208, 208, 0.3);
+  border-color: var(--bahama-blue);
 }
 
-.home-cont{
-    margin: 4% 10% 0%;
-    padding-top: 4%;
-    z-index: 5;
+.home-cont {
+  margin: 4% 10% 0%;
+  padding-top: 4%;
+  z-index: 5;
 }
 
-.small-txt{
-    padding-top: 1%;
-    font-size: 30px;
-    font-weight: 100;
-    color: var(--boston-blue);
+.small-txt {
+  padding-top: 1%;
+  font-size: 30px;
+  font-weight: 100;
+  color: var(--boston-blue);
 }
 
-.home-name{
-    font-size: 67px;
-    font-weight: 300;
-    color: var(--off-white);
+.home-name {
+  font-size: 67px;
+  font-weight: 300;
+  color: var(--off-white);
 }
 
-
-.home-profession{
-    font-size: 67px;
-    font-weight: 300;
-    color: var(--slated-gray);
+.home-profession {
+  font-size: 67px;
+  font-weight: 300;
+  color: var(--slated-gray);
 }
 
-.prof-typing{
-    font-weight: 700;
+.prof-typing {
+  font-weight: 700;
 }
-.my-pic{
-    padding: 1%;
-    max-width: 250px;
-    max-height: 250px;
-}
-
-.para-text{
-    max-width: 40rem;
-    font-size: 20px;
-    color: var(--slated-gray);
+.my-pic {
+  padding: 1%;
+  max-width: 250px;
+  max-height: 250px;
 }
 
-.uni-link{
-    font-size: 20px;
-    color: var(--boston-blue);
-    transition: all 0.3s ease 0s;
+.para-text {
+  max-width: 40rem;
+  font-size: 20px;
+  color: var(--slated-gray);
 }
 
-.uni-link:hover{
-    color:var(--bahama-blue)
+.uni-link {
+  font-size: 20px;
+  color: var(--boston-blue);
+  transition: all 0.3s ease 0s;
 }
 
-.resume-btn{
-    margin: 2% 0%;
-    padding: 1% 2%;
-    font-size: 20px;
-    color: var(--off-white);
-    border-radius: 5px;
-    border-color: var(--bahama-dark);
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+.uni-link:hover {
+  color: var(--bahama-blue);
 }
 
+.resume-btn {
+  margin: 2% 0%;
+  padding: 1% 2%;
+  font-size: 20px;
+  color: var(--off-white);
+  border-radius: 5px;
+  border-color: var(--bahama-dark);
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+#about{
+    margin: 10%;
+    color:var(--slated-gray);
+}
 
 .about-content{
-    margin: 9% 12%;
-    max-width: 50rem;
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 8% 4% 0;
 }
 
-.about-content .title{
-    color: var(--off-white);
-    margin: 0 0 5% 5%;
-}   
+.about-content img{
+    max-height: 15rem;
+    margin: auto 3%;
+    padding: auto 2%;
+}
 
 .about-content .txt-container{
-    margin: 0 25% 0 0;
-    padding: 0 0 5% 5%;
+    margin: 0 2% 2% ;
+    margin-left: auto;
     font-size: 20px;
-    color: var(--slated-gray);
-    max-width: 40rem;
 }
+
+#projects{
+    margin: 10%;
+    color:var(--slated-gray);
+}
+
+.proj-content{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 8% 9% 5%;
+}
+
